<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
         http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>fr.moodcraft</groupId>
    <artifactId>EconomyBridge</artifactId>
    <version>1.0</version>
    <packaging>jar</packaging>

    <name>EconomyBridge</name>

    <!-- ⚡ JAVA 21 -->
    <properties>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <!-- 📦 REPOSITORIES -->
    <repositories>

        <!-- Paper -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <!-- JitPack (Vault FIX) -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

        <!-- GitHub Packages -->
        <repository>
            <id>github</id>
            <url>https://maven.pkg.github.com/jeanmarieschintu89-max/EconomyBridgeV2</url>
        </repository>

    </repositories>

    <!-- 📦 DEPENDENCIES -->
    <dependencies>

        <!-- Paper -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.20.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- QuickShop -->
        <dependency>
            <groupId>com.quickshop</groupId>
            <artifactId>quickshop</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- Skript -->
        <dependency>
            <groupId>com.skript</groupId>
            <artifactId>skript</artifactId>
            <version>1.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- 🔥 VAULT FIX (IMPORTANT) -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7.1</version> <!-- ✅ FIX -->
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <!-- ⚙️ BUILD -->
    <build>
        <plugins>

            <!-- Compiler -->
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

        </plugins>
    </build>

    <!-- 🔐 AUTH GITHUB -->
    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/jeanmarieschintu89-max/EconomyBridgeV2</url>
        </repository>
    </distributionManagement>

</project>